in process of moving to stack

--- a/buffed.cabal
+++ b/buffed.cabal
@@ -26,51 +26,51 @@ executable buffed
   ghc-options:       -O -rtsopts -Wall -threaded -with-rtsopts=-N
   ghc-prof-options:  -O -rtsopts -fprof-auto -Wall
   Build-depends:
-    base ==4.7.*,
-    text ==1.1.*,
-    persistent ==1.3.*,
-    persistent-sqlite ==1.3.*,
-    persistent-template ==1.3.*,
+    base                    == 4.8.*,
+    text                      >= 1.1,
+    persistent                >= 1.3,
+    persistent-sqlite         >= 1.3,
+    persistent-template       >= 1.3,
     HTTP ==4000.2.*,
-    conduit ==1.1.*,
-    conduit-extra ==1.1.*,
+    conduit                   >= 1.1,
+    conduit-extra             >= 1.1,
     http-conduit ==2.*,
     http-types ==0.8.*,
     bytestring ==0.10.*,
-    fast-tagsoup ==1.0.5,
+    fast-tagsoup              ,
     tagsoup ==0.13.*,
-    encoding ==0.7.0.2,
+    encoding                  ,
     split ==0.2.*,
     binary ==0.7.*,
-    retry ==0.3.*,
-    time ==1.4.*,
-    esqueleto == 1.4.*,
+    retry,
+    time ==1.5.*,
+    esqueleto                 >= 1.4,
     old-locale >= 1.0.0.5,
     hslogger >= 1.2.3,
-    containers == 0.5.5.1,
-    either == 4.3.*,
-    transformers == 0.3.*,
-    mtl ==2.1.2,
+    containers                == 0.5.*,
+    either                    == 4.*,
+    transformers == 0.4.*,
+    mtl                       == 2.*,
     resourcet ==1.1.*,
     stringsearch >= 0.3.6.5,
-    network ==2.5.*,
+    network                   ,
     monad-parallel == 0.7.*,
     parallel,
     monad-extras == 0.5.*,
-    heist                     == 0.13.1.2,
-    MonadCatchIO-transformers == 0.3.1.2,
-    snap                      == 0.13.2.8,
-    snap-core                 == 0.9.6.3,
-    snap-server               == 0.9.4.5,
-    snap-loader-static        == 0.9.0.2,
-    snap-extras               == 0.9,
-    xmlhtml                   == 0.2.3.2,
-    lens == 4.4.0.1,
+    heist                     == 0.14.*,
+    MonadCatchIO-transformers == 0.3.*,
+    snap                      == 0.14.*,
+    snap-core                 == 0.9.*,
+    snap-server               == 0.9.*,
+    snap-loader-static,
+    snap-extras,
+    xmlhtml                   >= 0.2,
+    lens                      == 4.*,
     aeson                     == 0.8.0.2,
-    aeson-qq                  == 0.7.4
+    aeson-qq                  == 0.8.*
   if flag(development)
     Build-depends:
-      snap-loader-dynamic == 0.10.*
+      snap-loader-dynamic
     cpp-options: -DDEVELOPMENT
     ghc-options: -threaded -w
   else
