--- a/stack.yaml
+++ b/stack.yaml
@@ -5,6 +5,9 @@ flags:
   encoding:
     systemencoding: false
 
+#ghc-options:
+#  '*': -Wall -prof
+
 packages:
 - '.'
 extra-deps:
@@ -15,7 +18,7 @@ extra-deps:
 - readable-0.3.1
 - snap-extras-0.11.0.1
 - snap-loader-static-0.9.0.2
-resolver: lts-3.3
+resolver: lts-3.8
 #extra-include-dirs:
 #- C:\Users\ubear\Documents\coding\libss
 #- C:\Users\ubear\Documents\coding\libs\icu\include
